# ff

./: .gitignore  .gitmodules  README.md  prizes.html  prizes_summary.md
backend/: .gitignore  Cargo.toml
backend/guidelines/: aave_v3.md  uniswap_v3.md
backend/src/: main.rs
backend/src/handlers/: forge.rs  mod.rs
backend/src/models/: cli.rs  etherscan.rs  forge.rs  mod.rs
backend/src/processors/: etherscan.rs  heurist_llm.rs  mod.rs  protocol_guidelines.rs
backend/src/services/: forge.rs  mod.rs
backend/src/utils/: command.rs  dependencies.rs  mod.rs  tokens.rs
ui/: package.json  pnpm-lock.yaml  tailwind.config.ts
ui/src/: App.tsx  index.css  main.tsx
ui/src/components/ui/: spinner.tsx
