[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
async-openai = "0.27.2"
ethers = "2.0.14"
ethers-providers = "2.0.14"
eyre = "0.6.12"
futures = "0.3.31"
serde = "1.0.217"
serde_json = "1.0"
tokio = { version = "1.43.0", features = ["full", "rt-multi-thread"] }
tokio-postgres = "0.7.13"
clap = { version = "4.4", features = ["derive"] }
reqwest = "0.12.12"
openssl = { version = "0.10", features = ["vendored"] } 
encoding_rs = "0.8" 
tempfile = "3.2"
axum= { version = "0.7", features = ["macros"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
uuid = { version = "1.15.1", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }